--- a/css/main.css
+++ b/css/main.css
@@ -16,3 +16,22 @@
 .borderless {
     border: none!important;
 }
+
+@media only screen and (max-width: 767px){
+    .ui.stackable.grid>.wide.column.video{
+        padding-top: 14.25rem!important;
+    }
+}
+
+.video {
+    padding-bottom: 26.25%!important;
+    height: 0;
+    max-width: 100%;
+}
+.video iframe {
+    position: absolute;
+    top: 1rem;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
